--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "editor.detectIndentation": false
+	"editor.detectIndentation": true,
+	"editor.tabSize": 4,
+	"editor.guides.indentation": true,
+	"editor.autoIndent": "full",
+	"editor.insertSpaces": true,
+	"workbench.editor.focusRecentEditorAfterClose": true
 }
